@@ -25,9 +25,10 @@ dependencies {
     // This dependency is used by the application.
     implementation libs.guava
 
-    implementation 'org.apache.spark:spark-core_2.11:2.2.0'
-    implementation 'org.apache.spark:spark-sql_2.11:2.2.0'
-    implementation 'org.apache.spark:spark-mllib_2.11:2.2.0'
+    implementation 'org.apache.spark:spark-core_2.13:3.5.1'
+    implementation 'org.apache.spark:spark-sql_2.13:3.5.0'
+    implementation 'org.apache.spark:spark-mllib_2.13:3.5.0'
+    implementation 'com.github.rholder:snowball-stemmer:1.3.0.581.1'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -38,8 +39,20 @@ java {
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'org.mendeley.Main'
+    applicationDefaultJvmArgs = [
+        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+        '--add-opens=java.base/java.io=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.nio=ALL-UNNAMED'
+    ]
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += [
+        '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+    ]
 }
 
 tasks.named('test') {
